# dlp.nvim

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-dlp.pc.in
bindings/c/tree_sitter/: tree-sitter-dlp.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dlp/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDlpTests/: TreeSitterDlpTests.swift
lua/dlp/: init.lua
parser/: parser.c
plugin/: dlp.vim
queries/dlp/: highlights.scm
src/: grammar.json  node-types.json
