[package]
name = "tree-sitter-dlp"
description = "Dlp grammar for tree-sitter"
version = "1.0.0"
authors = ["Tobias Johansen <tobias@tophoej.dk>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "dlp"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/zogrethrow/dlp.nvim"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
